tests/errors/incbin-file-not-found.spcasmtest
org 0
incbin "does-not-exist"